--- a/style.css
+++ b/style.css
@@ -1,17 +1,41 @@
 body{
-    background:#CCCC
+
 }
 #banner {
-    width: 100%;
+    width:  100%;
 }
 .principal{
-    background: #CCCCCC;
-    padding: 30px;
+      background: #cccccc;
+      padding:30px; 
 }
-
+h1{
+    text-align: center;
+}
 p{
     text-align: center;
 }
+#missao {
+font-size: 20px;
+}
 em strong{
-color: rgb(255, 0, 106);
+    color: rgb(7, 120, 240);
+}
+.itens{
+    font-style: italic;
+}
+.beneficios{
+    background: #ffffff;
+    padding: 20px;
+}
+h2{
+    text-align: center;
+}
+ul{
+    display:inline-block;
+    vertical-align: top;
+    width: 20px;
+    margin-right: 15%;
+}
+.imagembeneficios {
+    width: 50%;
 }
